<resources>
    <string name="app_name">Document Reader</string>
    <string name="all_pdf_files">All Files</string>
    <string name="recent_files">Recent</string>
    <string name="bookmarked">Bookmark</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="file_name">file name</string>
    <string name="_10_4_mb_pdf">_10_4_mb_pdf</string>
    <string name="page_1_80">Page -/—</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="my_files">My Files</string>
    <string name="shared_files">Shared Files</string>
    <string name="tools">Tools</string>
    <string name="home">Home</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="search_here">Search here…</string>
    <string name="find_the_search_box_at_the_top_to_explorer_your_files">Find the search box at the top to explorer your files</string>
    <string name="pdf_editor">Pdf Editor</string>
    <string name="merge_pdf">Merge Pdf</string>
    <string name="signature">Signature</string>
    <string name="document_name_pdf">Document name.pdf</string>
    <string name="edit_pdf">Edit PDF</string>
    <string name="export_pdf">Export PDF</string>
    <string name="merge_files">Merge Files</string>
    <string name="compress_files">Compress Files</string>
    <string name="unstar">Unstar</string>
    <string name="organize_pages">Organize Pages</string>
    <string name="save_a_copy">Save a copy</string>
    <string name="print">Print</string>
    <string name="page_by_page_view">Page by Page View</string>
    <string name="night_mode">Night Mode</string>
    <string name="goto_page">Goto Page</string>
    <string name="horizontal_view">Horizontal View</string>
    <string name="scan_document">Scan Document</string>
    <string name="start">Start</string>
    <string name="disable_night_mode">Disable Night Mode</string>
    <string name="vertical_view">Vertical View</string>
    <string name="star">Star</string>
    <string name="un_star">Unstar</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="please_select_another_file">Please Select another file</string>
    <string name="merge">Merge</string>
    <string name="compressing">Compressing…</string>
    <string name="add_signature">Add Signature</string>
    <string name="please_write_here">Please write here…</string>
    <string name="save">Save</string>
    <string name="merge_exception_text">Some of the selected files are encrypted or lock please select normal files.</string>
    <string name="pdf_failed_to_save_msg">failed to save! please retry</string>
    <string name="_0">0</string>

    <string name="baseurl">https://api.ilovepdf.com/</string>
    <string name="nameSite">ilovepdf</string>
    <string name="invalid_entry">Invalid Entry</string>
    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="snackbar_pdfCreated">PDF created!</string>
    <string name="encrypted_pdf">PDF is password protected</string>
    <string name="ok">OK</string>
    <string name="compress_info">Congratulations! Your PDF is compressed: \n Original PDF Size : %s \n Compressed PDF Size: %s</string>
    <string name="crop">Crop</string>
    <string name="calendar">Calendar</string>
    <string name="text">Text</string>
    <string name="replace_image">Replace Image</string>
    <string name="add_calendar">Add Calendar</string>
    <string name="add_text">Add Text</string>
    <string name="gallery">Gallery</string>
    <string name="create_new_pdf">Create New PDF</string>
    <string name="image_to_pdf">Image to PDF</string>
    <string name="text_to_pdf">Text to PDF</string>
    <string name="excel_to_pdf">Excel to PDF</string>
    <string name="edit_existing_pdf">Edit Existing PDF</string>
    <string name="re_order_pages">Re-Order Pages</string>
    <string name="add_remove_password">Add/Remove Password</string>
    <string name="compress">Compress</string>
    <string name="extract_text">Extract Text</string>
    <string name="enter_password">Enter Password</string>
    <string name="add_password">Add Password</string>
    <string name="proceed">Proceed</string>
    <string name="add">Add</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_file_is_password_protected">Your File is Password Protected</string>
    <string name="cannot_add_password">Password could not be applied to the PDF. Please check the PDF again.</string>
    <string name="snackbar_password_cannot_be_blank">Password cannot be blank</string>
    <string name="encrypted_file">_encrypted.pdf</string>
    <string name="not_encrypted">PDF is not Encrypted</string>
    <string name="set_password">Set Password</string>
    <string name="master_password_changed">The password seems to be incorrect. May be, you have changed the master password.</string>
    <string name="decrypted_file">_unencrypted.pdf</string>
    <string name="decrypted">Decrypted</string>
    <string name="pdf_is_now_password_protected">Pdf is now password protected</string>
    <string name="password_is_now_removed">Password is now Removed</string>
    <string name="encrypted">Encrypted</string>
    <string name="share">Share</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="text_type" translatable="false">text/plain</string>
    <string name="install_file_manager">Please install a File Manager</string>
    <string name="select_file">\"Select a File to Upload\"</string>
    <string name="text_file_selected">Text File Selected</string>
    <string name="extension_not_supported">Sorry! This file type is not supported currently.</string>

    <!--file name suffix-->
    <string name="pdf_suffix" translatable="false">_pdf</string>
    <string name="text_file_name">"Text File : "</string>
    <string name="unlock">Unlock</string>
    <string name="lock">Lock</string>
    <string name="error_pdf_not_created">Sorry, PDF was not created. Please try again</string>
    <string name="a4">A4</string>
    <string name="excel_selected">Excel file selected</string>
    <string name="go">Go</string>
    <string name="enter_page_no">Enter Page No</string>
    <string name="page_no">Page No</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="select_files_from_storage">Select files from storage</string>
    <string name="browse_files">Browse Files</string>
    <string name="get_started">Lets Read</string>
    <string name="wait">Waiting for movement</string>
    <string name="_123456789012345678901234567890">_123456789012345678901234567890</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure ! You want to Exit?</string>
    <string name="please_share_this_rating_on_our_app_on_the_google_play_store_by_tapping_continue">Would you like to rate us?</string>
    <string name="feedback">Feedback</string>
    <string name="continue_str">Continue</string>
    <string name="rate_your_experience">Rate Your Experience</string>
    <string name="how_would_you_rate_your_experience">How would you rate your experience?</string>
    <string name="remove_password">Remove Password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="remove">Remove</string>
    <string name="loading">Loading…</string>
    <string name="the_following_permissions_are_required">The following permissions are required</string>
    <string name="allow_access_to_manege_all_files"><u><b>Allow access to manege all files</b></u></string>
    <string name="please_give_permission_to_manege_all_document_files_to_this_app_thanks">Please give permission to manege all document files to this app. Thanks!</string>
    <string name="permissions"><b>Permissions</b></string>
    <string name="allow_permission">Allow Permission</string>
    <string name="unlock_nunlimited_access"><b>Unlock\nUnlimited Access</b></string>
    <string name="to_premium_version">to premium version</string>
    <string name="subcription_txt">After the 3-day free trial, the subscription automatically renews at Rs 1,600.00 per month and is charged to your Google Play account until cancelled. You may cancel anytime by going to Subscription in App Store. After cancellation, the subscription will continue until the end of that month\'s billing period.</string>
    <string name="terms">Terms of Service</string>
    <string name="privacy_policy"><u>Privacy Policy</u> | </string>
    <string name="restore_tv"><u>Restore Purchases</u></string>
    <string name="terms_of_service"><u>Terms of service</u> | </string>
    <string name="restore_purchases"><u>Restore Purchases</u></string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="share_title">Share Using</string>
    <string name="all_files">All Files</string>
    <string name="pdf">Pdf</string>
    <string name="woed_str">Word</string>
    <string name="ppt_str">Power Point</string>
    <string name="excel_str">Excel</string>
    <string name="starred">Starred</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="ad">AD</string>


</resources>