<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/menu_home_ic"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/menu_search_ic"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/menu_settings_ic"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
</menu>
<!--<set xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillAfter="true"
    android:interpolator="@android:anim/cycle_interpolator">
​
    <translate
        android:repeatCount="infinite"
        android:fromXDelta="0%" android:toXDelta="10%"
        android:fromYDelta="0%" android:toYDelta="0%"
        android:duration="1500"/>
</set>
val aniSlide: Animation = AnimationUtils.loadAnimation(this, R.anim.bounce_animation)
binding.selectkb.startAnimation(aniSlide)
-->