<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        app:cardCornerRadius="@dimen/_15sdp"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/ic_add_remove_pass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/remove_password"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/empty_bg_btn_4"
                style="@style/layoutStyleSecond"
                android:hint="@string/enter_current_password"
                android:paddingStart="@dimen/_20sdp"
                android:paddingEnd="@dimen/_20sdp"
                android:inputType="textPassword"
                android:lines="1"
                android:layout_marginTop="@dimen/_5ssp"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />


            <Button
                android:id="@+id/processBtn"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/empty_bg_btn_4"
                android:text="@string/remove"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_25sdp"
                android:background="@drawable/empty_bg_btn_4"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:backgroundTint="@color/secondaryColor"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="@+id/processBtn"
                app:layout_constraintEnd_toStartOf="@+id/processBtn"
                app:layout_constraintTop_toTopOf="@+id/processBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>