<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_10sdp"
        android:layout_height="@dimen/_50sdp">

        <TextView
            android:id="@+id/headerTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:lines="1"
            android:text="@string/app_name"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/headerSideTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="1"
            android:text="@string/replace_image"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            android:background="@drawable/ripple"
            android:textColor="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_back"
            android:padding="@dimen/_5sdp"
            style="@style/svgDrawableStyle"
            android:background="@drawable/ripple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/image" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>