<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/ripple"
        app:cardUseCompatPadding="true"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardElevation="@dimen/cardElevation"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/cardRadius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ripple"
            android:padding="@dimen/_5sdp">

            <ImageView
                android:id="@+id/pdfImgView"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_pdf_file"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/pdfTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:singleLine="true"
                android:text="@string/browse_files"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/pdfImgView"
                app:layout_constraintEnd_toStartOf="@+id/menuBtn"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toEndOf="@+id/pdfImgView"
                app:layout_constraintTop_toTopOf="@+id/pdfImgView"
                app:layout_constraintVertical_bias="0.00999999" />

            <TextView
                android:id="@+id/pdfSizeTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/select_files_from_storage"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/pdfImgView"
                app:layout_constraintEnd_toStartOf="@+id/menuBtn"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/pdfTxt"
                app:layout_constraintTop_toBottomOf="@+id/pdfTxt"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/menuBtn"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_add_editor"
                android:background="@drawable/ripple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/image" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</layout>